--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "knex migrate:latest",
+    "seed": "knex seed:run",
+    "makeMigration": "knex migrate:make",
+    "makeSeed": "knex seed:make"
   },
   "keywords": [],
   "author": "",
@@ -12,8 +16,10 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "knex": "^3.0.1",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
