--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "migrate": "knex migrate:latest",
     "seed": "knex seed:run",
     "makeMigration": "knex migrate:make",
@@ -19,9 +22,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "knex": "^3.0.1",
-    "nodemon": "^3.0.1",
     "pg": "^8.11.3",
-    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1"
   }
 }
