--- a/backend/package.json
+++ b/backend/package.json
@@ -22,11 +22,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "knex": "^3.0.1",
     "pg": "^8.11.3",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.16",
+    "@types/express-session": "^1.17.10",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
