--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,8 +8,9 @@
     "skipLibCheck": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "sourceMap": true
+    "sourceMap": true,
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "./types.d.ts"] ,
   "exclude": ["node_modules", "dist"]
 }
