--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,7 +7,7 @@
     "strict": true,
     "skipLibCheck": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "sourceMap": true,
     "typeRoots": ["./node_modules/@types", "./types"]
   },
